# games

./: .gitignore  Makefile  cabal.project  cabal.project.local  index.html  spectromancer-server  stack.yaml
51/: Cards  Cards.hs  CardsOld.hs  NewCards.hs  State.hs  Types.hs  redo.hs
51/ui/: index.html  ui.css
MK/: MK.cabal
MK/src/: Act.hs  Act.hs-boot  AdvancedAction.hs  BasicDeed.hs  Combat.hs  Common.hs  Deed.hs  Deed.hs-boot  Enemies.hs  Game.hs  GameTile.hs  HexContent.hs  Land.hs  NewRule.hs  Player.hs  Ruins.hs  Rule.hs  Skill.hs  Spell.hs  Tactic.hs  Terrain.hs  Units.hs  Util
MK/src/Util/: Bag.hs  Misc.hs  Perhaps.hs  Q.hs  Random.hs
ac-game/: Basics.hs  Board.hs  Game.hs  JSON.hs  Main.hs  out.hs
ac-game/ui/: draw.js  index.html
bards/: Basics.hs  Board.hs  Game.hs  Main.hs  Pawn.hs  Plan.hs  Util
bards/docs/: Makefile  Rules.md
draw/: Bezier.hs  Main.hs  draw.cabal
elements/: elements.cabal
elements/Elements/: BasicTypes.hs  Enemies.hs  Game.hs  GameTile.hs  Land.hs  Protocol.hs  Terrain.hs
elements/exe/: Main.hs
elements/ui/: draw.js  index.html  map.css  map.js  ui.css
engine/: Engine.hs  Hex.hs
finished/: Finished.hs
game-utils/: game-utils.cabal
game-utils/Util/: Bag.hs  Hex.hs  History.hs  JSON.hs  List1.hs  Perhaps.hs  Random.hs  ResourceQ.hs  Snap.hs
game_1/: CHANGELOG.md  game1.cabal
game_1/src/: Game.hs  Main.hs  RenderText.hs
hrm/: HRM.hs  example.hr
hyper-knight/: hyper-knight.cabal
hyper-knight/HyperKnight/: Rules.hs
hyper-knight/exe/: Main.hs
hyper-knight/ui/: index.html
hyperborea/: LICENSE  hyperborea.cabal
hyperborea/Hyperborea/: Actions.hs  ActivePlayer.hs  Protocol.hs  Rules.hs  Terrain.hs  Types.hs
hyperborea/exe/: Main.hs
hyperborea/ui/: factory.js  index.html  material.js  rule.js
ll/: State.hs
mike-game/: Graph.hs
muscat/: Area.hs  CHANGELOG.md  Config.hs  Game.hs  Ids.hs  Market.hs  Model.hs  Player.hs  TurnOrder.hs  Updater.hs  cabal.project  muscat.cabal
muscat/src/: Game.hs  Interact.hs  Main.hs  Model.hs  Tile.hs  Updater.hs
muscat/ui/: index.html  style.css  ui.js
res-arcana/: Artifcats.hs  BasicTypes.hs  Component.hs  Language.hs  Player.hs
resources/: Lang.hs  Util
sdl/: test.hs
spectromancer/: CardTypes.hs  Cards.hs  Cards.html  Deck.hs  Effects.hs  Game.hs  GameMonad.hs  Main.hs  ServerState.hs  State.hs  Turn.hs  Types.hs  cards.js  spectromancer.cabal  ui.js
spectromancer/src/: CardIds.hs  CardTypes.hs  Cards.hs  Deck.hs  EffectAPI.hs  Effects.hs  Effects.hs-boot  Game.hs  GameMonad.hs  GameStats.hs  Replay.hs  ServerState.hs  Turn.hs
spectromancer/src/Decks/: Air.hs  Beast.hs  Control.hs  Death.hs  Demonic.hs  Earth.hs  Fire.hs  Forest.hs  Goblin.hs  Golem.hs  Holy.hs  Illusion.hs  Mechanical.hs  Spirit.hs  Vampiric.hs  Water.hs
spectromancer/ui/: CardList.html  Cards.html  Play.html  drawEvent.js  game.js  players.js  ui.js
zendo/: Lang.hs  Main.hs  UI.hs  Zendo.hs  Zendo.z3
zendo/ui/: drag.html  editor.html  index.html  ui.js  unify.js
