name:                MK
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Common
                       GameTile
                       Land
                       Terrain
                       Enemies
                       HexContent
                       Ruins
                       Units
                       Rule

  build-depends:       base,
                       bytestring,
                       containers,
                       text,
                       random,
                       pretty,
                       array

  hs-source-dirs:      src
  default-language:    Haskell2010



