name:                 draw
version: 0.1
build-type: Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.11,
                       vector,
                       containers,
                       array,
                       directory,
                       text,
                       bytestring,
                       filepath,
                       pretty,
                       monadLib,
                       sdl2,
                       sdl2-image,
                       sdl2-gfx,
                       game-utils
  default-language: Haskell2010
