name:                elements
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Elements.GameTile,
                       Elements.Enemies,
                       Elements.Land,
                       Elements.BasicTypes,
                       Elements.Game,
                       Elements.Terrain

  build-depends:       base,
                       game-utils,
                       snap-server,
                       snap-core,
                       bytestring,
                       containers,
                       text,
                       monadLib,
                       array >=0.5 && <0.6

  default-language:    Haskell2010

executable Elements
  hs-source-dirs:      exe
  main-is: Main.hs
  build-depends:       base,
                       text,
                       containers,
                       elements,
                       game-utils,
                       snap-core,
                       snap-server


