
name:                game-utils
version:             0.1.0.0
synopsis:            Various utilities, mostly for board games witha browser UI
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Util.JSON,
                       Util.Snap,
                       Util.Perhaps,
                       Util.Random,
                       Util.History,
                       Util.Misc,
                       Util.ResourceQ,
                       Util.Bag,
                       Util.Q

  build-depends:       base                 >=4.8 && <4.9,
                       text                 >=1.2 && <1.3,
                       aeson                >=0.9 && <0.10,
                       vector               >=0.10,
                       bytestring           >=0.10 && <0.11,
                       snap-core            >=0.9 && <0.10,
                       random               >=1.1 && <1.2,
                       array                >=0.5 && <0.6,
                       containers           >=0.5 && <0.6,
                       transformers

  default-language:    Haskell2010
