
name:                game-utils
version:             0.1.0.1
synopsis:            Various utilities, mostly for board games witha browser UI
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Util.JSON,
                       Util.Snap,
                       Util.Perhaps,
                       Util.Random,
                       Util.History,
                       Util.Misc,
                       Util.ResourceQ,
                       Util.Bag,
                       Util.Q,
                       Util.Hex

  build-depends:       base                 >=4.8,
                       text                 >=1.2,
                       aeson                >=0.9,
                       vector               >=0.10,
                       bytestring           >=0.10,
                       snap-core            >=0.9,
                       random               >=1.1,
                       array                >=0.5,
                       containers           >=0.5,
                       transformers

  default-language:    Haskell2010
