name:                hyper-knight
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HyperKnight.Rules

  build-depends:       base,
                       game-utils,
                       text

  default-language:    Haskell2010

executable HyperKnight
  main-is:             Main.hs
  hs-source-dirs:      exe
  build-depends:       base,
                       hyper-knight,
                       game-utils,
                       snap-core,
                       snap-server


