name:                spectromancer
version:             0.1.0.0
-- synopsis:
-- description:
build-type:          Simple
cabal-version:       >=1.10

executable spectromancer-server
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:     Cards,Deck,CardTypes,CardIds,State,
                       Util.Snap,Util.Random,Util.JSON
  build-depends:       base,
                       random,
                       array, 
                       containers, 
                       aeson,
                       text,
                       bytestring,
                       vector,
                       template-haskell,
                       snap-core,
                       snap-server
  default-language:    Haskell2010

