name:                spectromancer
version:             0.1.0.0
-- synopsis:
-- description:
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  exposed-modules:     Cards,Deck,
                       CardTypes,
                       CardIds,
                       Effects,
                       Game,
                       GameMonad,
                       Turn,
                       ServerState,
                       Replay
  build-depends:       base,
                       random,
                       array, 
                       containers, 
                       aeson,
                       text,
                       bytestring,
                       vector,
                       template-haskell,
                       lens,
                       time,
                       game-utils
  default-language:    Haskell2010

executable spectromancer-server
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       spectromancer,
                       aeson,
                       text,
                       containers,
                       snap-core,
                       snap-server,
                       game-utils
                       
  default-language:    Haskell2010

